@@ -8,6 +8,7 @@
 * Fix - Welcome page redirection on every plugin updates.
 * Fix - New Email Notifications not being saved on reload.
 * Fix - New Email Notifications cloned blank for assigned values.
+* Fix - Payment Multiple choices and checkboxes fields amount preview in form builder area.
 
 = 1.7.4 - 11-03-2021 =
 * Fix - Hide empty select data field from entry view.
